--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,4 @@ coverage
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
