--- a/apps/server/gateway/package.json
+++ b/apps/server/gateway/package.json
@@ -21,12 +21,19 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "@apollo/gateway": "0.46.0",
+    "@nestjs/apollo": "9.2.4",
+    "@nestjs/common": "8.2.3",
+    "@nestjs/core": "8.2.3",
+    "@nestjs/graphql": "10.0.0",
+    "@nestjs/platform-express": "8.2.3",
+    "apollo-server-express": "3.6.2",
+    "graphql": "15.7.2",
+    "graphql-tools": "8.0.0",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "rxjs": "7.4.0",
+    "ts-morph": "12.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
