--- a/apps/server/user-service/package.json
+++ b/apps/server/user-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bryter-graphql/application-service",
+  "name": "@bryter-graphql/user-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -30,6 +30,7 @@
     "@nestjs/graphql": "10.0.0",
     "@nestjs/platform-express": "8.2.3",
     "apollo-server-express": "3.6.2",
+    "dataloader": "^2.1.0",
     "graphql": "15.7.2",
     "graphql-tools": "8.0.0",
     "reflect-metadata": "0.1.13",
