--- a/apps/server/graphql-gateway/package.json
+++ b/apps/server/graphql-gateway/package.json
@@ -7,20 +7,20 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "yarn nest build users && yarn nest build applications && yarn nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start:applications": "nest start applications",
     "start:applications:dev": "nest start applications --watch",
     "start:applications:debug": "nest start applications --debug --watch",
-    "start:applications:prod": "node dist/ applications/main",
+    "start:applications:prod": "node dist/apps/applications/main",
     "start:users": "nest start users",
     "start:users:dev": "nest start users --watch",
     "start:users:debug": "nest start users --debug --watch",
-    "start:users:prod": "node dist/ users/main",
+    "start:users:prod": "node dist/apps/users/main",
     "start:gateway": "sleep 10 && yarn nest start gateway",
     "start:gateway:dev": "sleep 10 && yarn nest start gateway --watch",
     "start:gateway:debug": "sleep 10 && yarn nest start gateway --debug --watch",
-    "start:gateway:prod": "sleep 10 && node dist/ gateway/main",
+    "start:gateway:prod": "sleep 10 && node dist/apps/gateway/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
