--- a/package.json
+++ b/package.json
@@ -7,25 +7,11 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "build:graphql-gateway": "yarn workspace @bryter-graphql/gateway run build",
-    "start:graphql-gateway:applications": "yarn workspace @bryter-graphql/gateway start:applications",
-    "start:graphql-gateway:applications:dev": "yarn workspace @bryter-graphql/gateway start:applications:dev",
-    "start:graphql-gateway:applications:debug": "yarn workspace @bryter-graphql/gateway start:applications:debug",
-    "start:graphql-gateway:applications:prod": "yarn workspace @bryter-graphql/gateway start:applications:prod",
-    "start:graphql-gateway:users": "yarn workspace @bryter-graphql/gateway start:users",
-    "start:graphql-gateway:users:dev": "yarn workspace @bryter-graphql/gateway start:users:dev",
-    "start:graphql-gateway:users:debug": "yarn workspace @bryter-graphql/gateway start:users:debug",
-    "start:graphql-gateway:users:prod": "yarn workspace @bryter-graphql/gateway start:users:prod",
-    "start:graphql-gateway:gateway": "yarn workspace @bryter-graphql/gateway start:gateway",
-    "start:graphql-gateway:gateway:dev": "yarn workspace @bryter-graphql/gateway start:gateway:dev",
-    "start:graphql-gateway:gateway:debug": "yarn workspace @bryter-graphql/gateway start:gateway:debug",
-    "start:graphql-gateway:gateway:prod": "yarn workspace @bryter-graphql/gateway start:gateway:prod",
-    "start:graphql-gateway": "run-p start:graphql-gateway:applications start:graphql-gateway:users start:graphql-gateway:gateway -n",
-    "start:graphql-gateway:dev": "run-p start:graphql-gateway:applications:dev start:graphql-gateway:users:dev start:graphql-gateway:gateway:dev",
-    "start:graphql-gateway:debug": "run-p start:graphql-gateway:applications:debug start:graphql-gateway:users:debug start:graphql-gateway:gateway:debug",
-    "start:graphql-gateway:prod": "run-p start:graphql-gateway:applications:prod start:graphql-gateway:users:prod start:graphql-gateway:gateway:prod",
-    "build:client": "lerna run build --scope \"@bryter-client/*\" --stream",
-    "start:client:dev": "lerna run start:dev --scope \"@bryter-client/*\" --stream",
+    "build": "turbo run build",
+    "start": "turbo run start:applications start:users start:gateway",
+    "start:dev": "turbo run start:applications:dev start:users:dev start:gateway:dev start:client:dev",
+    "start:debug": "turbo run start:applications:debug start:users:debug start:gateway:debug",
+    "start:prod": "turbo run start:applications:prod start:users:prod start:gateway:prod start:frontend",
     "lint": "lerna run lint"
   },
   "workspaces": {
@@ -45,8 +31,8 @@
     ]
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
+    "turbo": "^1.2.9",
     "typescript": "^4.3.5"
   }
 }
